Added line breaks.

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 </head>
 <body>
 
-	<a href="http://bretthansen.github.io/custom_layers_example/">Polling Fraud</a>
-	<a href="http://bretthansen.github.io/EulerLine/">Euler Line</a>
-	<a href="http://bretthansen.github.io/Gravity/">Gravity Simulation</a>
-	<a href="http://bretthansen.github.io/Tupper/">Tupper's Self Refential Formula</a>
+	<a href="http://bretthansen.github.io/custom_layers_example/">Polling Fraud</a><br>
+	<a href="http://bretthansen.github.io/EulerLine/">Euler Line</a><br>
+	<a href="http://bretthansen.github.io/Gravity/">Gravity Simulation</a><br>
+	<a href="http://bretthansen.github.io/Tupper/">Tupper's Self Refential Formula</a><br>
 
 </body>
 </html>
