Added images and changed page layout.

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
+          <ul class="nav navbar-nav">
             <li><a href="http://www.github.com/bretthansen">Github</a></li>
             <li><a href="http://www.linkedin.com/in/brettjhansen">LinkedIn</a></li>
           </ul>
-        </div><!--/.navbar-collapse -->
+        </div>
       </div>
     </nav>
 
@@ -39,23 +39,47 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-5">
           <h2>Maricopa Polling</h2>
           <p>The reduced number and questionable placement of polling locations during the latest Presedential Preference election in Maricopa County elicited accusations of election fraud and voter disenfranchisement, especially in poorer and minority-majority communites. This map shows polling locations for the past three Presedential Preference elections as well as block level race statistics.</p>
           <p><a class="btn btn-default" href="http://bretthansen.github.io/MaricopaPolling" role="button">View Demo &raquo;</a>
           <a class="btn btn-default" href="https://github.com/bretthansen/MaricopaPolling" role="button">View Code &raquo;</a></p>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-5">
+          <img class="img-rounded img-responsive" src="./images/maricopa.png">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-5">
           <h2>Euler Line</h2>
           <p>There are many ways of measuring the center of a triangle. This interactive javascript canvas shows that at least three of them&mdash;centroid, orthocenter, circumcenter&mdash;lie along a line coined the Euler Line.</p>
           <p><a class="btn btn-default" href="http://bretthansen.github.io/EulerLine" role="button">View Demo &raquo;</a>
           <a class="btn btn-default" href="https://github.com/bretthansen/EulerLine" role="button">View Code &raquo;</a></p>
-       </div>
-        <div class="col-md-4">
+        </div>
+        <div class="col-md-5">
+          <img class="img-rounded img-responsive" src="./images/euler.png">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-5">
           <h2>Tupper's Self-Referential Formula</h2>
-          <p>A function that graphs itself, what could be more fun&#8253; This interactive javascript canvas not only shows the famous function, but also allows you to create your own images and find their corresponding k-values.</p>
+          <p>A function that graphs itself, what could be more fun? This interactive javascript canvas not only shows the famous function, but also allows you to create your own images and find their corresponding k-values.</p>
           <p><a class="btn btn-default" href="http://bretthansen.github.io/Tupper" role="button">View Demo &raquo;</a>
           <a class="btn btn-default" href="https://github.com/bretthansen/Tupper" role="button">View Code &raquo;</a></p>
+        </div>
+        <div class="col-md-5">
+          <img class="img-rounded img-responsive" src="./images/tupper.png">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-5">
+          <h2>3D Gravity Simulation</h2>
+          <p>A solar system right in your browser! This gravity simulation utilizes customized GLSL shaders running through WebGL within an HTML5 Canvas. <i>Note: Solar system not to scale.</i></p>
+          <p><a class="btn btn-default" href="http://bretthansen.github.io/Gravity" role="button">View Demo &raquo;</a>
+          <a class="btn btn-default" href="https://github.com/bretthansen/Gravity" role="button">View Code &raquo;</a></p>
+        </div>
+        <div class="col-md-5">
+          <img class="img-rounded img-responsive" src="./images/gravity.png">
         </div>
       </div>
 
