--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
 
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="./index.html">Stadtfestlauf</a>
+        </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="http://www.github.com/bretthansen">Github</a></li>
@@ -82,12 +91,7 @@
           <img class="img-rounded img-responsive" src="./images/gravity.png">
         </div>
       </div>
-
       <hr>
-
-      <footer>
-        <p>&copy; 2016 Brett Hansen</p>
-      </footer>
     </div> <!-- /container -->
 
 
