Made images links to demos.

--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
 
     <title>Brett Hansen's Projects</title>
 
-    <!-- Bootstrap -->
-<!--     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
- -->    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-<!--     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script> -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link href="stylesheet.css" rel="stylesheet">
   </head>
 
@@ -39,8 +36,8 @@
 
     <div class="jumbotron">
       <div class="container">
-        <h3>Brett Hansen's Projects</h3>
-        <p>I am currently an undergraduate student at Arizona State University studying computer science, mathematics, and economics. You can checkout some of my projects below.</p>
+        <h2>Brett Hansen</h2>
+        <p>I am currently an undergraduate student at Arizona State University studying computer science, mathematics, and economics. Take a look below to see some of my projects.</p>
       </div>
     </div>
 
@@ -53,7 +50,7 @@
           <a class="btn btn-default" href="https://github.com/bretthansen/MaricopaPolling" role="button">View Code &raquo;</a></p>
         </div>
         <div class="col-md-5">
-          <img class="img-rounded img-responsive" src="./images/maricopa.png">
+          <a href="http://bretthansen.github.io/MaricopaPolling"><img class="img-rounded img-responsive" src="./images/maricopa.png"></a>
         </div>
       </div>
       <div class="row">
@@ -64,7 +61,7 @@
           <a class="btn btn-default" href="https://github.com/bretthansen/EulerLine" role="button">View Code &raquo;</a></p>
         </div>
         <div class="col-md-5">
-          <img class="img-rounded img-responsive" src="./images/euler.png">
+          <a href="http://bretthansen.github.io/EulerLine"><img class="img-rounded img-responsive" src="./images/euler.png"></a>
         </div>
       </div>
       <div class="row">
@@ -75,7 +72,7 @@
           <a class="btn btn-default" href="https://github.com/bretthansen/Tupper" role="button">View Code &raquo;</a></p>
         </div>
         <div class="col-md-5">
-          <img class="img-rounded img-responsive" src="./images/tupper.png">
+          <a href="http://bretthansen.github.io/Tupper"><img class="img-rounded img-responsive" src="./images/tupper.png"></a>
         </div>
       </div>
       <div class="row">
@@ -86,7 +83,7 @@
           <a class="btn btn-default" href="https://github.com/bretthansen/Gravity" role="button">View Code &raquo;</a></p>
         </div>
         <div class="col-md-5">
-          <img class="img-rounded img-responsive" src="./images/gravity.png">
+          <a href="http://bretthansen.github.io/Gravity"><img class="img-rounded img-responsive" src="./images/gravity.png"></a>
         </div>
       </div>
       <hr>
