--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
+    <link rel="icon" href="./favicon.ico">
 
     <title>Brett Hansen's Projects</title>
 
@@ -27,8 +27,12 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="http://www.github.com/bretthansen">Github</a></li>
-            <li><a href="http://www.linkedin.com/in/brettjhansen">LinkedIn</a></li>
+            <li>
+              <a href="http://www.github.com/bretthansen">Github</a>
+            </li>
+            <li>
+              <a href="http://www.linkedin.com/in/brettjhansen">LinkedIn</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -46,7 +50,7 @@
         <div class="col-md-5">
           <h2>Maricopa Polling</h2>
           <p>The reduced number and questionable placement of polling locations during the latest Presedential Preference election in Maricopa County elicited accusations of election fraud and voter disenfranchisement, especially in poorer and minority-majority communites. This map shows polling locations for the past three Presedential Preference elections as well as block level race statistics.</p>
-          <p><a class="btn btn-default" href="http://bretthansen.github.io/MaricopaPolling" role="button">View Demo &raquo;</a>
+          <p><a class="btn btn-default btn-primary" href="http://bretthansen.github.io/MaricopaPolling" role="button">View Demo &raquo;</a>
           <a class="btn btn-default" href="https://github.com/bretthansen/MaricopaPolling" role="button">View Code &raquo;</a></p>
         </div>
         <div class="col-md-5">
@@ -57,7 +61,7 @@
         <div class="col-md-5">
           <h2>Euler Line</h2>
           <p>There are many ways of measuring the center of a triangle. This interactive javascript canvas shows that at least three of them&mdash;centroid, orthocenter, circumcenter&mdash;lie along a line coined the Euler Line.</p>
-          <p><a class="btn btn-default" href="http://bretthansen.github.io/EulerLine" role="button">View Demo &raquo;</a>
+          <p><a class="btn btn-default btn-primary" href="http://bretthansen.github.io/EulerLine" role="button">View Demo &raquo;</a>
           <a class="btn btn-default" href="https://github.com/bretthansen/EulerLine" role="button">View Code &raquo;</a></p>
         </div>
         <div class="col-md-5">
@@ -68,7 +72,7 @@
         <div class="col-md-5">
           <h2>Tupper's Self-Referential Formula</h2>
           <p>A function that graphs itself, what could be more fun? This interactive javascript canvas not only shows the famous function, but also allows you to create your own images and find their corresponding k-values.</p>
-          <p><a class="btn btn-default" href="http://bretthansen.github.io/Tupper" role="button">View Demo &raquo;</a>
+          <p><a class="btn btn-default btn-primary" href="http://bretthansen.github.io/Tupper" role="button">View Demo &raquo;</a>
           <a class="btn btn-default" href="https://github.com/bretthansen/Tupper" role="button">View Code &raquo;</a></p>
         </div>
         <div class="col-md-5">
@@ -79,7 +83,7 @@
         <div class="col-md-5">
           <h2>3D Gravity Simulation</h2>
           <p>A solar system right in your browser! This gravity simulation utilizes customized GLSL shaders running through WebGL within an HTML5 Canvas. <i>Note: Solar system not to scale.</i></p>
-          <p><a class="btn btn-default" href="http://bretthansen.github.io/Gravity" role="button">View Demo &raquo;</a>
+          <p><a class="btn btn-default btn-primary" href="http://bretthansen.github.io/Gravity" role="button">View Demo &raquo;</a>
           <a class="btn btn-default" href="https://github.com/bretthansen/Gravity" role="button">View Code &raquo;</a></p>
         </div>
         <div class="col-md-5">
@@ -95,8 +99,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+<!--     <script src="../../dist/js/bootstrap.min.js"></script> -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
   </body>
 </html>
