--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="icon.ico" type="image/x-icon">
-
+    <link rel="shortcut icon" href="icon.ico" type="image/x-icon">    
     <title>Brett Hansen's Projects</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -40,8 +39,15 @@
 
     <div class="jumbotron">
       <div class="container">
-        <h2>Brett Hansen</h2>
-        <p>I am currently an undergraduate student at Arizona State University studying computer science, mathematics, and economics. Take a look below to see some of my projects.</p>
+        <div class="row">
+          <div class="col-md-2">
+            <img class="img-circle img-responsive" src="./images/avatar.jpg">
+          </div>
+          <div class="col-md-9">
+            <h2>Brett Hansen</h2>
+            <p>I am a student at Arizona State University studying computer science, mathematics, and economics. Take a look below to see some of my projects.</p>
+          </div>
+        </div>
       </div>
     </div>
 
@@ -77,6 +83,17 @@
         </div>
         <div class="col-md-5">
           <a href="http://bretthansen.github.io/Tupper"><img class="img-rounded img-responsive" src="./images/tupper.png"></a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-5">
+          <h2>JSON Viewer</h2>
+          <p>A simple drag and drop JSON viewer. Each level of the JSON is only parsed on demand so large and complex files can be parsed a single branch at a time avoiding clutter and long loading times.
+          <p><a class="btn btn-default btn-primary" href="http://bretthansen.github.io/JSONViewer" role="button">View Demo &raquo;</a>
+          <a class="btn btn-default" href="https://github.com/bretthansen/JSONViewer" role="button">View Code &raquo;</a></p>
+        </div>
+        <div class="col-md-5">
+          <a href="http://bretthansen.github.io/JSONViewer"><img class="img-rounded img-responsive" src="./images/jsonviewer.png"></a>
         </div>
       </div>
       <div class="row">
