--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
     <div class="jumbotron">
       <div class="container">
         <div class="row">
-          <div class="col-md-2">
+<!--           <div class="col-md-2">
             <img class="img-circle img-responsive" src="./images/avatar.jpg">
-          </div>
+          </div> -->
           <div class="col-md-9">
             <h2>Brett Hansen</h2>
             <p>I am a student at Arizona State University studying computer science, mathematics, and economics. Take a look below to see some of my projects.</p>
