Added age distribution project.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
     <div class="container">
       <div class="row">
         <div class="col-md-5">
+          <h2>American Age Distributions</h2>
+          <p><a href="http://www.bartleby.com/70/3822.html" target="_blank" class="text-uppercase">What's in a name?</a> As part of an ongoing paper concerning the information inherent in a name, this visualization was created to expand on the results in a piece by <a href="http://fivethirtyeight.com/features/how-to-tell-someones-age-when-all-you-know-is-her-name/" target="_blank">FiveThirtyEight</a> that estimated the age distribution of living Americans by their first name.</p>
+          <p><a class="btn btn-default" href="http://bretthansen.github.io/age_distribution_by_name" role="button">View Demo &raquo;</a>
+          <a class="btn btn-default" href="https://github.com/bretthansen/age_distribution_by_name" role="button">View Code &raquo;</a></p>
+        </div>
+        <div class="col-md-5">
+          <a href="http://bretthansen.github.io/age_distribution_by_name"><img class="img-rounded img-responsive" src="./images/age_dist.png"></a>
+        </div>
+      </div>
+        <div class="col-md-5">
           <h2>Maricopa Polling</h2>
           <p>The reduced number and questionable placement of polling locations during the latest Presedential Preference election in Maricopa County elicited accusations of election fraud and voter disenfranchisement, especially in poorer and minority-majority communites. This map shows polling locations for the past three Presedential Preference elections as well as block level race statistics.</p>
           <p><a class="btn btn-default" href="http://bretthansen.github.io/MaricopaPolling" role="button">View Demo &raquo;</a>
