--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="icon.ico" type="image/x-icon">    
+    <link rel="icon" href="../../favicon.ico">
+
     <title>Brett Hansen's Projects</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -26,12 +27,8 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li>
-              <a href="http://www.github.com/bretthansen">Github</a>
-            </li>
-            <li>
-              <a href="http://www.linkedin.com/in/brettjhansen">LinkedIn</a>
-            </li>
+            <li><a href="http://www.github.com/bretthansen">Github</a></li>
+            <li><a href="http://www.linkedin.com/in/brettjhansen">LinkedIn</a></li>
           </ul>
         </div>
       </div>
@@ -39,15 +36,8 @@
 
     <div class="jumbotron">
       <div class="container">
-        <div class="row">
-<!--           <div class="col-md-2">
-            <img class="img-circle img-responsive" src="./images/avatar.jpg">
-          </div> -->
-          <div class="col-md-9">
-            <h2>Brett Hansen</h2>
-            <p>I am a student at Arizona State University studying computer science, mathematics, and economics. Take a look below to see some of my projects.</p>
-          </div>
-        </div>
+        <h2>Brett Hansen</h2>
+        <p>I am currently an undergraduate student at Arizona State University studying computer science, mathematics, and economics. Take a look below to see some of my projects.</p>
       </div>
     </div>
 
@@ -55,7 +45,7 @@
       <div class="row">
         <div class="col-md-5">
           <h2>American Age Distributions</h2>
-          <p><a href="http://www.bartleby.com/70/3822.html" target="_blank" class="text-uppercase">What's in a name?</a> As part of an ongoing paper concerning the information inherent in a name, this visualization was created to expand on the results in a piece by <a href="http://fivethirtyeight.com/features/how-to-tell-someones-age-when-all-you-know-is-her-name/" target="_blank">FiveThirtyEight</a> that estimated the age distribution of living Americans by their first name.</p>
+          <p><a href="http://www.bartleby.com/70/3822.html" target="_blank"><em>What's in a name?</em></a> As part of an ongoing paper concerning the information inherent in a name, this visualization was created to expand on the results in a piece by <a href="http://fivethirtyeight.com/features/how-to-tell-someones-age-when-all-you-know-is-her-name/" target="_blank">FiveThirtyEight</a> that estimated the age distribution of living Americans by their first name.</p>
           <p><a class="btn btn-default" href="http://bretthansen.github.io/age_distribution_by_name" role="button">View Demo &raquo;</a>
           <a class="btn btn-default" href="https://github.com/bretthansen/age_distribution_by_name" role="button">View Code &raquo;</a></p>
         </div>
@@ -63,6 +53,7 @@
           <a href="http://bretthansen.github.io/age_distribution_by_name"><img class="img-rounded img-responsive" src="./images/age_dist.png"></a>
         </div>
       </div>
+      <div class="row">
         <div class="col-md-5">
           <h2>Maricopa Polling</h2>
           <p>The reduced number and questionable placement of polling locations during the latest Presedential Preference election in Maricopa County elicited accusations of election fraud and voter disenfranchisement, especially in poorer and minority-majority communites. This map shows polling locations for the past three Presedential Preference elections as well as block level race statistics.</p>
