--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="col-md-5">
           <h2>American Age Distributions</h2>
           <p><a href="http://www.bartleby.com/70/3822.html" target="_blank"><em>What's in a name?</em></a> As part of an ongoing paper concerning the information inherent in a name, this visualization was created to expand on the results in a piece by <a href="http://fivethirtyeight.com/features/how-to-tell-someones-age-when-all-you-know-is-her-name/" target="_blank">FiveThirtyEight</a> that estimated the age distribution of living Americans by their first name.</p>
-          <p><a class="btn btn-default" href="http://bretthansen.github.io/age_distribution_by_name" role="button">View Demo &raquo;</a>
+          <p><a class="btn btn-primary" href="http://bretthansen.github.io/age_distribution_by_name" role="button">View Demo &raquo;</a>
           <a class="btn btn-default" href="https://github.com/bretthansen/age_distribution_by_name" role="button">View Code &raquo;</a></p>
         </div>
         <div class="col-md-5">
@@ -57,7 +57,7 @@
         <div class="col-md-5">
           <h2>Maricopa Polling</h2>
           <p>The reduced number and questionable placement of polling locations during the latest Presedential Preference election in Maricopa County elicited accusations of election fraud and voter disenfranchisement, especially in poorer and minority-majority communites. This map shows polling locations for the past three Presedential Preference elections as well as block level race statistics.</p>
-          <p><a class="btn btn-default btn-primary" href="http://bretthansen.github.io/MaricopaPolling" role="button">View Demo &raquo;</a>
+          <p><a class="btn btn-primary" href="http://bretthansen.github.io/MaricopaPolling" role="button">View Demo &raquo;</a>
           <a class="btn btn-default" href="https://github.com/bretthansen/MaricopaPolling" role="button">View Code &raquo;</a></p>
         </div>
         <div class="col-md-5">
@@ -68,7 +68,7 @@
         <div class="col-md-5">
           <h2>Euler Line</h2>
           <p>There are many ways of measuring the center of a triangle. This interactive javascript canvas shows that at least three of them&mdash;centroid, orthocenter, circumcenter&mdash;lie along a line coined the Euler Line.</p>
-          <p><a class="btn btn-default btn-primary" href="http://bretthansen.github.io/EulerLine" role="button">View Demo &raquo;</a>
+          <p><a class="btn btn-primary" href="http://bretthansen.github.io/EulerLine" role="button">View Demo &raquo;</a>
           <a class="btn btn-default" href="https://github.com/bretthansen/EulerLine" role="button">View Code &raquo;</a></p>
         </div>
         <div class="col-md-5">
@@ -79,7 +79,7 @@
         <div class="col-md-5">
           <h2>Tupper's Self-Referential Formula</h2>
           <p>A function that graphs itself, what could be more fun? This interactive javascript canvas not only shows the famous function, but also allows you to create your own images and find their corresponding k-values.</p>
-          <p><a class="btn btn-default btn-primary" href="http://bretthansen.github.io/Tupper" role="button">View Demo &raquo;</a>
+          <p><a class="btn btn-primary" href="http://bretthansen.github.io/Tupper" role="button">View Demo &raquo;</a>
           <a class="btn btn-default" href="https://github.com/bretthansen/Tupper" role="button">View Code &raquo;</a></p>
         </div>
         <div class="col-md-5">
@@ -90,7 +90,7 @@
         <div class="col-md-5">
           <h2>JSON Viewer</h2>
           <p>A simple drag and drop JSON viewer. Each level of the JSON is only parsed on demand so large and complex files can be parsed a single branch at a time avoiding clutter and long loading times.
-          <p><a class="btn btn-default btn-primary" href="http://bretthansen.github.io/JSONViewer" role="button">View Demo &raquo;</a>
+          <p><a class="btn btn-primary" href="http://bretthansen.github.io/JSONViewer" role="button">View Demo &raquo;</a>
           <a class="btn btn-default" href="https://github.com/bretthansen/JSONViewer" role="button">View Code &raquo;</a></p>
         </div>
         <div class="col-md-5">
@@ -101,7 +101,7 @@
         <div class="col-md-5">
           <h2>3D Gravity Simulation</h2>
           <p>A solar system right in your browser! This gravity simulation utilizes customized GLSL shaders running through WebGL within an HTML5 Canvas. <i>Note: Solar system not to scale.</i></p>
-          <p><a class="btn btn-default btn-primary" href="http://bretthansen.github.io/Gravity" role="button">View Demo &raquo;</a>
+          <p><a class="btn btn-primary" href="http://bretthansen.github.io/Gravity" role="button">View Demo &raquo;</a>
           <a class="btn btn-default" href="https://github.com/bretthansen/Gravity" role="button">View Code &raquo;</a></p>
         </div>
         <div class="col-md-5">
