Fixed some links, made content column in center of page.

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="http://www.github.com/bretthansen">Github</a></li>
-            <li><a href="http://www.linkedin.com/in/brettjhansen">LinkedIn</a></li>
+            <li><a href="https://github.com/BrettHansen?tab=repositories" target="blank" class="navbar-link">Github</a></li>
+            <li><a href="http://www.linkedin.com/in/brettjhansen" target="blank" class="navbar-link">LinkedIn</a></li>
           </ul>
         </div>
       </div>
@@ -36,14 +36,14 @@
 
     <div class="jumbotron">
       <div class="container">
-        <h2>Brett Hansen</h2>
-        <p>I am currently an undergraduate student at Arizona State University studying computer science, mathematics, and economics. Take a look below to see some of my projects.</p>
+        <h3>Brett Hansen</h3>
+        <p class="bio">I am currently an undergraduate student at Arizona State University studying computer science, mathematics, and economics. Take a look below to see some of my projects.</p>
       </div>
     </div>
 
     <div class="container">
       <div class="row">
-        <div class="col-md-5">
+        <div class="col-md-5 col-md-offset-1">
           <h2>American Age Distributions</h2>
           <p><a href="http://www.bartleby.com/70/3822.html" target="_blank"><em>What's in a name?</em></a> As part of an ongoing paper concerning the information inherent in a name, this visualization was created to expand on the results in a piece by <a href="http://fivethirtyeight.com/features/how-to-tell-someones-age-when-all-you-know-is-her-name/" target="_blank">FiveThirtyEight</a> that estimated the age distribution of living Americans by their first name.</p>
           <p><a class="btn btn-primary" href="http://bretthansen.github.io/age_distribution_by_name" role="button">View Demo &raquo;</a>
@@ -54,7 +54,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-5">
+        <div class="col-md-5 col-md-offset-1">
           <h2>Maricopa Polling</h2>
           <p>The reduced number and questionable placement of polling locations during the latest Presedential Preference election in Maricopa County elicited accusations of election fraud and voter disenfranchisement, especially in poorer and minority-majority communites. This map shows polling locations for the past three Presedential Preference elections as well as block level race statistics.</p>
           <p><a class="btn btn-primary" href="http://bretthansen.github.io/MaricopaPolling" role="button">View Demo &raquo;</a>
@@ -65,7 +65,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-5">
+        <div class="col-md-5 col-md-offset-1">
           <h2>Euler Line</h2>
           <p>There are many ways of measuring the center of a triangle. This interactive javascript canvas shows that at least three of them&mdash;centroid, orthocenter, circumcenter&mdash;lie along a line coined the Euler Line.</p>
           <p><a class="btn btn-primary" href="http://bretthansen.github.io/EulerLine" role="button">View Demo &raquo;</a>
@@ -76,7 +76,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-5">
+        <div class="col-md-5 col-md-offset-1">
           <h2>Tupper's Self-Referential Formula</h2>
           <p>A function that graphs itself, what could be more fun? This interactive javascript canvas not only shows the famous function, but also allows you to create your own images and find their corresponding k-values.</p>
           <p><a class="btn btn-primary" href="http://bretthansen.github.io/Tupper" role="button">View Demo &raquo;</a>
@@ -87,7 +87,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-5">
+        <div class="col-md-5 col-md-offset-1">
           <h2>JSON Viewer</h2>
           <p>A simple drag and drop JSON viewer. Each level of the JSON is only parsed on demand so large and complex files can be parsed a single branch at a time avoiding clutter and long loading times.
           <p><a class="btn btn-primary" href="http://bretthansen.github.io/JSONViewer" role="button">View Demo &raquo;</a>
@@ -98,7 +98,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-5">
+        <div class="col-md-5 col-md-offset-1">
           <h2>3D Gravity Simulation</h2>
           <p>A solar system right in your browser! This gravity simulation utilizes customized GLSL shaders running through WebGL within an HTML5 Canvas. <i>Note: Solar system not to scale.</i></p>
           <p><a class="btn btn-primary" href="http://bretthansen.github.io/Gravity" role="button">View Demo &raquo;</a>
@@ -109,15 +109,9 @@
         </div>
       </div>
       <hr>
-    </div> <!-- /container -->
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-<!--     <script src="../../dist/js/bootstrap.min.js"></script> -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   </body>
 </html>
