Added pva browser, made all links open in new tab, and fixed a ridiculous amount of spelling mistakes.

--- a/index.html
+++ b/index.html
@@ -46,66 +46,76 @@
         <div class="col-md-5 col-md-offset-1">
           <h2>American Age Distributions</h2>
           <p><a href="http://www.bartleby.com/70/3822.html" target="_blank"><em>What's in a name?</em></a> As part of an ongoing paper concerning the information inherent in a name, this visualization was created to expand on the results in a piece by <a href="http://fivethirtyeight.com/features/how-to-tell-someones-age-when-all-you-know-is-her-name/" target="_blank">FiveThirtyEight</a> that estimated the age distribution of living Americans by their first name.</p>
-          <p><a class="btn btn-primary" href="http://bretthansen.github.io/age_distribution_by_name" role="button">View Demo &raquo;</a>
-          <a class="btn btn-default" href="https://github.com/bretthansen/age_distribution_by_name" role="button">View Code &raquo;</a></p>
+          <p><a class="btn btn-primary" href="http://bretthansen.github.io/age_distribution_by_name" role="button" target="_blank">View Demo &raquo;</a>
+          <a class="btn btn-default" href="https://github.com/bretthansen/age_distribution_by_name" role="button" target="_blank">View Code &raquo;</a></p>
         </div>
         <div class="col-md-5">
-          <a href="http://bretthansen.github.io/age_distribution_by_name"><img class="img-rounded img-responsive" src="./images/age_dist.png"></a>
+          <a href="http://bretthansen.github.io/age_distribution_by_name" target="_blank"><img class="img-rounded img-responsive" src="./images/age_dist.png"></a>
         </div>
       </div>
       <div class="row">
         <div class="col-md-5 col-md-offset-1">
           <h2>Maricopa Polling</h2>
-          <p>The reduced number and questionable placement of polling locations during the latest Presedential Preference election in Maricopa County elicited accusations of election fraud and voter disenfranchisement, especially in poorer and minority-majority communites. This map shows polling locations for the past three Presedential Preference elections as well as block level race statistics.</p>
-          <p><a class="btn btn-primary" href="http://bretthansen.github.io/MaricopaPolling" role="button">View Demo &raquo;</a>
-          <a class="btn btn-default" href="https://github.com/bretthansen/MaricopaPolling" role="button">View Code &raquo;</a></p>
+          <p>The reduced number and questionable placement of polling locations during the latest Presidential Preference election in Maricopa County elicited accusations of election fraud and voter disenfranchisement, especially in poorer and minority-majority communities. This map shows polling locations for the past three Presidential Preference elections as well as block level race statistics.</p>
+          <p><a class="btn btn-primary" href="http://bretthansen.github.io/MaricopaPolling" role="button" target="_blank">View Demo &raquo;</a>
+          <a class="btn btn-default" href="https://github.com/bretthansen/MaricopaPolling" role="button" target="_blank">View Code &raquo;</a></p>
         </div>
         <div class="col-md-5">
-          <a href="http://bretthansen.github.io/MaricopaPolling"><img class="img-rounded img-responsive" src="./images/maricopa.png"></a>
+          <a href="http://bretthansen.github.io/MaricopaPolling" target="_blank"><img class="img-rounded img-responsive" src="./images/maricopa.png"></a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-5 col-md-offset-1">
+          <h2>Predictive Visual Analytics Browser</h2>
+          <p>As part of a survey paper on the state of predictive visual analytics out of the <a href="http://vader.lab.asu.edu" target="_blank">VADER Lab</a>, this browser was created to showcase the papers we will discuss. As opposed to the more conventional approach of an extensive, manual review of the literature, we analyzed the entire body of work out of several relevant journals and used topic modeling to initially select the relevant papers.</p>
+          <p><a class="btn btn-primary" href="http://vader.lab.asu.edu/pva_browser" role="button" target="_blank">View Demo &raquo;</a>
+        </div>
+        <div class="col-md-5">
+          <a href="http://vader.lab.asu.edu/pva_browser" target="_blank"><img class="img-rounded img-responsive" src="./images/pva_browser.png"></a>
         </div>
       </div>
       <div class="row">
         <div class="col-md-5 col-md-offset-1">
           <h2>Euler Line</h2>
           <p>There are many ways of measuring the center of a triangle. This interactive javascript canvas shows that at least three of them&mdash;centroid, orthocenter, circumcenter&mdash;lie along a line coined the Euler Line.</p>
-          <p><a class="btn btn-primary" href="http://bretthansen.github.io/EulerLine" role="button">View Demo &raquo;</a>
-          <a class="btn btn-default" href="https://github.com/bretthansen/EulerLine" role="button">View Code &raquo;</a></p>
+          <p><a class="btn btn-primary" href="http://bretthansen.github.io/EulerLine" role="button" target="_blank">View Demo &raquo;</a>
+          <a class="btn btn-default" href="https://github.com/bretthansen/EulerLine" role="button" target="_blank">View Code &raquo;</a></p>
         </div>
         <div class="col-md-5">
-          <a href="http://bretthansen.github.io/EulerLine"><img class="img-rounded img-responsive" src="./images/euler.png"></a>
+          <a href="http://bretthansen.github.io/EulerLine" target="_blank"><img class="img-rounded img-responsive" src="./images/euler.png"></a>
         </div>
       </div>
       <div class="row">
         <div class="col-md-5 col-md-offset-1">
           <h2>Tupper's Self-Referential Formula</h2>
           <p>A function that graphs itself, what could be more fun? This interactive javascript canvas not only shows the famous function, but also allows you to create your own images and find their corresponding k-values.</p>
-          <p><a class="btn btn-primary" href="http://bretthansen.github.io/Tupper" role="button">View Demo &raquo;</a>
-          <a class="btn btn-default" href="https://github.com/bretthansen/Tupper" role="button">View Code &raquo;</a></p>
+          <p><a class="btn btn-primary" href="http://bretthansen.github.io/Tupper" role="button" target="_blank">View Demo &raquo;</a>
+          <a class="btn btn-default" href="https://github.com/bretthansen/Tupper" role="button" target="_blank">View Code &raquo;</a></p>
         </div>
         <div class="col-md-5">
-          <a href="http://bretthansen.github.io/Tupper"><img class="img-rounded img-responsive" src="./images/tupper.png"></a>
+          <a href="http://bretthansen.github.io/Tupper" target="_blank"><img class="img-rounded img-responsive" src="./images/tupper.png"></a>
         </div>
       </div>
       <div class="row">
         <div class="col-md-5 col-md-offset-1">
           <h2>JSON Viewer</h2>
           <p>A simple drag and drop JSON viewer. Each level of the JSON is only parsed on demand so large and complex files can be parsed a single branch at a time avoiding clutter and long loading times.
-          <p><a class="btn btn-primary" href="http://bretthansen.github.io/JSONViewer" role="button">View Demo &raquo;</a>
-          <a class="btn btn-default" href="https://github.com/bretthansen/JSONViewer" role="button">View Code &raquo;</a></p>
+          <p><a class="btn btn-primary" href="http://bretthansen.github.io/JSONViewer" role="button" target="_blank">View Demo &raquo;</a>
+          <a class="btn btn-default" href="https://github.com/bretthansen/JSONViewer" role="button" target="_blank">View Code &raquo;</a></p>
         </div>
         <div class="col-md-5">
-          <a href="http://bretthansen.github.io/JSONViewer"><img class="img-rounded img-responsive" src="./images/jsonviewer.png"></a>
+          <a href="http://bretthansen.github.io/JSONViewer" target="_blank"><img class="img-rounded img-responsive" src="./images/jsonviewer.png"></a>
         </div>
       </div>
       <div class="row">
         <div class="col-md-5 col-md-offset-1">
           <h2>3D Gravity Simulation</h2>
           <p>A solar system right in your browser! This gravity simulation utilizes customized GLSL shaders running through WebGL within an HTML5 Canvas. <i>Note: Solar system not to scale.</i></p>
-          <p><a class="btn btn-primary" href="http://bretthansen.github.io/Gravity" role="button">View Demo &raquo;</a>
-          <a class="btn btn-default" href="https://github.com/bretthansen/Gravity" role="button">View Code &raquo;</a></p>
+          <p><a class="btn btn-primary" href="http://bretthansen.github.io/Gravity" role="button" target="_blank">View Demo &raquo;</a>
+          <a class="btn btn-default" href="https://github.com/bretthansen/Gravity" role="button" target="_blank">View Code &raquo;</a></p>
         </div>
         <div class="col-md-5">
-          <a href="http://bretthansen.github.io/Gravity"><img class="img-rounded img-responsive" src="./images/gravity.png"></a>
+          <a href="http://bretthansen.github.io/Gravity" target="_blank"><img class="img-rounded img-responsive" src="./images/gravity.png"></a>
         </div>
       </div>
       <hr>
